--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -21,3 +21,30 @@
   background-color: #04AA6D;
   color: white;
 }
+
+.modal-user-container {
+
+  .modal-user-body{
+
+    display:flex;
+    flex-direction:row;
+    gap: 10px;
+    flex-wrap: wrap;
+    .input-container{
+      display:flex;
+      flex-direction:column;
+      width: 49%;
+      input {
+        border-radius: 3px;
+        height: 30px;
+      }
+      &.max-width-input{
+        width: 100%;
+
+    }
+
+    }
+  }
+
+
+}
